hphp/hack/test/typecheck/attributes/entry_point_multiple.php
<?hh

<<__EntryPoint>>
function f(): void {}

<<__EntryPoint>>
function g(): void {}

<<__EntryPoint>>
function h(): void {}
